2008-04-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Rewrote the alert engine. Small fixes.

2008-04-09  Sancho Lerena <slerena@gmail.com>

	* AUTHORS, README: Updated.

	* util/pandora_db.pl: Modified version of compactation funtion
	needs to be tested, not functional yet.

	* Makefile.PL: Updated install for new servers.

	* bin/pandora_snmpconsole, pandora_export, pandora_recon,
	pandora_server: Fix problem with old daemonize call.

2008-04-08  Sancho Lerena <slerena@gmail.com>

	*  pandora_server_installer: Updated some strings and version. 
	Added new servers.
	
	* lib/PandoraFMS/Config.pm: Included support for export server.

	* bin/pandora_export: Export server skeleton.

2008-04-01  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_prediction: Fixed several problems with
	prediction on anomaly detection. Tested and works fine for me.

	* DB.pm: Fixed problem in combined alerts. Removed some
	log entries.

2008-04-01  Ramon Novoa  <rnovoa@artica.es>

	* util/tentacle_serverd: Changed default port and address (now
	  listens on all local interfaces by default).

2008-04-01  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* README: Removed duplicated dependency package.

2008-03-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm, lib/PandoraFMS/DB.pm: Added
	  compound alert support.

2008-03-25  Ramon Novoa  <rnovoa@artica.es>

	*  util/tentacle_serverd: Added to repository. Tentacle server
	   simple startup script.

2008-03-19  Manuel Arostegui <marostegui@artica.es>

     * pandora_server.spec: Added to repository. New spec
          file for 1.3.X pandora server version.

    * specs/*: Deleted this directory and the files inside,
          they are all deprecated.

2008-03-13  Sancho Lerena <slerena@gmail.com>

    * lib/PandoraFMS/Config.pm: New pandora_startlog function. Added support to manage PID
    in daemon mode. Added support for quiet mode. Added prediction_threads option. 
