@@ -1,5 +1,10 @@
 2008-04-16  Ramon Novoa  <rnovoa@artica.es>
 
+	* lib/PandoraFMS/DB.pm: Small code optimization. Took a couple
+	  of prepare statements out of a loop.
+
+2008-04-16  Ramon Novoa  <rnovoa@artica.es>
+
 	* lib/PandoraFMS/DB.pm: Rewrote the alert engine. Small fixes.
 
 2008-04-09  Sancho Lerena <slerena@gmail.com>
